fix sidebar-overflow

--- a/app/assets/stylesheets/client.css
+++ b/app/assets/stylesheets/client.css
@@ -27,6 +27,7 @@
   display: flex;
   flex-direction: column;
   background-color: rgb(18, 18, 18);
+  overflow: auto;
 }
 
 .username-display:hover {
